--- a/css/style.css
+++ b/css/style.css
@@ -145,6 +145,8 @@ body{
     text-decoration: none;
     display: grid;
     place-content: center;
+    border: none;
+    background-color: transparent;
 }
 
 .pulse{
@@ -195,50 +197,50 @@ body{
 
 /* pop up video */
 
-.modal{
-    width: 100vw !important;
-    height: 950px !important;
-    background-color: rgb(0, 0, 0, .8) !important;
-    border: none;
-    box-shadow: none !important;
-}
-
-.modal-dialog{
-    min-width: 85vw !important;
-    min-height: 100vh !important;
-    margin-left: auto !important;
-    margin-right: auto !important;
-    margin-top: auto !important;
-    margin-bottom: auto !important;
-    border: none;
-    box-shadow: none !important;
-}
-
-.modal-header{
-    border: none !important;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 
-.modal-content{
-    width: 100% !important;
-    height: 100% !important;
-    background-color: transparent !important;
-    border: none !important;
-    box-shadow: none !important;
-}
-
-.youtube-btn{
+.rat{
+    position: fixed;
+    background-color: rgba(0, 0, 0, .95);
+    height: 100%;
     width: 100%;
-    height: 500px;
-    box-shadow: none;
-    border: none;
+    top: 0;
+    left: 0;
+    z-index: 9999;
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    overflow: auto;
+
 }
 
-.youtube{
+.closeBtn{
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    border: none;
+    background-color: transparent;
+}
+
+.closeBtn i{
+    font-size: 30px;
+    color: #490c77;
+}
+
+.my-yut{
+    width: 80%;
+    height: 80%;
+}
+
+.youtube-play{
     width: 100%;
     height: 100%;
-    box-shadow: none;
-    border: none;
 }
 
 
@@ -680,39 +682,20 @@ body{
     }
 
 
-    .youtube-btn{
-        width: 100%;
+    .my-yut{
+        width: 95%;
         height: 300px;
-        box-shadow: none;
-        border: none;
     }
-
-    .modal-dialog{
-        min-width: 100vw !important;
-        min-height: 100vh !important;
-        margin-left: auto !important;
-        margin-right: auto !important;
-        margin-top: auto !important;
-        margin-bottom: auto !important;
-        border: none;
-        box-shadow: none !important;
+    
+    .youtube-play{
+        width: 100%;
+        height: 100%;
     }
 
 
 }
 
 @media only screen and (max-width: 950px){
-
-    .modal-dialog{
-        min-width: 100vw !important;
-        min-height: 100vh !important;
-        margin-left: auto !important;
-        margin-right: auto !important;
-        margin-top: auto !important;
-        margin-bottom: auto !important;
-        border: none;
-        box-shadow: none !important;
-    }
 
     .intro-1{
         font-size: 14px;
@@ -734,6 +717,16 @@ body{
 
     .to-top{
         display: none;
+    }
+
+    .my-yut{
+        width: 90%;
+        height: 40%;
+    }
+    
+    .youtube-play{
+        width: 100%;
+        height: 100%;
     }
 
 }
