--- a/css/style.css
+++ b/css/style.css
@@ -212,12 +212,13 @@ body{
     top: 0;
     left: 0;
     z-index: 9999;
-    display: none;
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     overflow: auto;
-
+    transform: translateY(100vw);
+    transition: all 2s;
 }
 
 .closeBtn{
@@ -242,6 +243,9 @@ body{
     width: 100%;
     height: 100%;
 }
+
+
+
 
 
 
@@ -640,7 +644,11 @@ body{
     }
 
     .latest{
-        font-size: 40px;
+        font-size: 30px;
+    }
+
+    .start{
+        font-size: 30px;
     }
 
     .cloud{
@@ -657,15 +665,19 @@ body{
     }
     
     .our-serve{
-        font-size: 29.5px;
+        font-size: 29px;
     }
 
     .my-trustee{
+        font-size: 28px;
+    }
+
+    .faq{
         font-size: 30px;
     }
 
     .protocol{
-        font-size: 27px;
+        font-size: 24px;
     }
 
 
@@ -676,6 +688,10 @@ body{
 
     .last-name{
         margin-top: 12px;
+    }
+
+    .testimonial{
+        font-size: 30px;
     }
 
     .to-top{
@@ -717,11 +733,11 @@ body{
 @media only screen and (max-width: 950px){
 
     .intro-1{
-        font-size: 14px;
+        font-size: 17px;
     }
 
     #my-name{
-        font-size: 26px;
+        font-size: 36px;
     }
 
     .form-head{
@@ -748,10 +764,22 @@ body{
         height: 100%;
     }
 
+    .faq{
+        font-size: 42px;
+    }
+
 }
 
 @media only screen and (min-width: 951px){
     #telegram-icon{
         font-size: 4em;
+    }
+
+    .faq{
+        font-size: 52px;
+    }
+
+    .my-trustee{
+        font-size: 39px;
     }
 }
