--- a/css/style.css
+++ b/css/style.css
@@ -644,6 +644,17 @@ body{
 
 @media only screen and (max-width: 550px){
 
+    .navbar-toggler{
+        color: transparent !important;
+        border: none;
+        transform: rotate(0deg);
+        transition: transform 0.6s linear;
+    }
+
+    .turn{
+        transform: rotate(270deg);
+    }
+
     .section1 {
         padding-top: 50px;
     }
