--- a/css/style.css
+++ b/css/style.css
@@ -234,7 +234,7 @@ body{
     align-items: center;
     justify-content: center;
     overflow: auto;
-    transform: translateY(100vh);
+    transform: translateX(100vw);
     transition: all 2s;
 }
 
@@ -764,7 +764,20 @@ body{
         font-size: 42px;
     }
 
+    #my-name{
+        padding-top: 0px !important;
+    }
 
+    .navbar-toggler{
+        color: transparent !important;
+        border: none;
+        transform: rotate(0deg);
+        transition: transform 0.6s linear;
+    }
+
+    .turn{
+        transform: rotate(270deg);
+    }
 }
 
 
